Add localiation to Validations#39

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,8 @@
 Exception.unexpected=Unexpected Exception
 Exception.userNotFound=User Not Found
 Exception.userOrPasswordWrong=User or Password Wrong
+Exception.userNameExist=User name exist
 Exception.phoneValidationFailed=Phone Validation Failed
 Exception.emailValidationFailed=Email Validation Failed
+
+
