--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,5 +4,6 @@ Exception.userOrPasswordWrong=User or Password Wrong
 Exception.userNameExist=User name exist
 Exception.phoneValidationFailed=Phone Validation Failed
 Exception.emailValidationFailed=Email Validation Failed
+Exception.animalNotFound=Animal Not Found
 
 
