Redesign of structure

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,5 +5,6 @@ Exception.userNameExist=User name exist
 Exception.phoneValidationFailed=Phone Validation Failed
 Exception.emailValidationFailed=Email Validation Failed
 Exception.animalNotFound=Animal Not Found
+Exception.userUpdatedFailed=User update failed
 
 
