Animal Service Mapper Refactor

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,5 +7,6 @@ Exception.emailValidationFailed=Email Validation Failed
 Exception.animalNotFound=Animal Not Found
 Exception.userUpdatedFailed=User update failed
 Exception.housePropertyExist=House property already exist
+Exception.houseIDNullAnimal=House can not be null for animal
 
 
