--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,6 +8,7 @@ Exception.animalNotFound=Animal Not Found
 Exception.userUpdatedFailed=User update failed
 Exception.housePropertyExist=House property already exist
 Exception.houseIDNullAnimal=House can not be null for animal
+Exception.permissionRequestException=Permission already requested
 
 
 
