--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,8 @@ Exception.userUpdatedFailed=User update failed
 Exception.housePropertyExist=House property already exist
 Exception.houseIDNullAnimal=House can not be null for animal
 Exception.permissionRequestException=Permission already requested
+Exception.permissionOperationNotExistException=No operation
+Exception.permissionUpdateFailed=Permission progress update operation failed
 
 
 
