Creating task controller is finish#MAH-1

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,6 +11,6 @@ Exception.houseIDNullAnimal=House can not be null for animal
 Exception.permissionRequestException=Permission already requested
 Exception.permissionOperationNotExistException=No operation
 Exception.permissionUpdateFailed=Permission progress update operation failed
-
-
-
+Exception.taskNotFound=Task not found
+Exception.taskNotFoundWithThisStatus=Task not found with this status
+Exception.commentNotFound=Comment not found
