unit test is completed for task service

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,3 +14,4 @@ Exception.permissionUpdateFailed=Permission progress update operation failed
 Exception.taskNotFound=Task not found
 Exception.taskNotFoundWithThisStatus=Task not found with this status
 Exception.commentNotFound=Comment not found
+Exception.taskNotFoundWithThisOwnerId=Task not found with this user information
