complete review fixes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,3 +15,5 @@ Exception.taskNotFound=Task not found
 Exception.taskNotFoundWithThisStatus=Task not found with this status
 Exception.commentNotFound=Comment not found
 Exception.taskNotFoundWithThisOwnerId=Task not found with this user information
+Exception.notificationSettingUpdatedFailed=Notification settings operation failed
+Exception.notificationNotFound=Notification settings not found
