Extracting the function as a blob storage service

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,3 +17,5 @@ Exception.commentNotFound=Comment not found
 Exception.taskNotFoundWithThisOwnerId=Task not found with this user information
 Exception.notificationSettingUpdatedFailed=Notification settings operation failed
 Exception.notificationNotFound=Notification settings not found
+Exception.profilePictureUpdatedFailed=Profile picture update operation failed
+Exception.uploadPictureFailed=Upload picture operation failed
