--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,3 +19,4 @@ Exception.notificationSettingUpdatedFailed=Notification settings operation faile
 Exception.notificationNotFound=Notification settings not found
 Exception.profilePictureUpdatedFailed=Profile picture update operation failed
 Exception.uploadPictureFailed=Upload picture operation failed
+Exception.emailExistException=Email already exist
