Update House Service

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,7 @@ Exception.phoneValidationFailed=Phone Validation Failed
 Exception.emailValidationFailed=Email Validation Failed
 Exception.animalNotFound=Animal Not Found
 Exception.userUpdatedFailed=User update failed
+Exception.houseUpdatedFailed=House update failed
 Exception.housePropertyExist=House property already exist
 Exception.houseIDNullAnimal=House can not be null for animal
 Exception.permissionRequestException=Permission already requested
